parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHAR
    COLON
    DOUBLE
    LOGICAL_NOT
    L_BRACKET
    NOT
    RETURN
    R_BRACKET

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM MAIN L_BRACE expressions R_BRACE
Rule 2     expressions -> expressions expression
Rule 3     expressions -> expression
Rule 4     expression -> var_declaration SEMICOLON
Rule 5     expression -> write SEMICOLON
Rule 6     expression -> writeln SEMICOLON
Rule 7     expression -> statement SEMICOLON
Rule 8     expression -> if_else_statement
Rule 9     expression -> for_loop
Rule 10    expression -> while_loop
Rule 11    expression -> empty
Rule 12    write -> WRITE L_PAREN statement R_PAREN
Rule 13    writeln -> WRITELN L_PAREN statement R_PAREN
Rule 14    statement -> IDENTIFIER
Rule 15    statement -> statement PLUS statement
Rule 16    statement -> statement MINUS statement
Rule 17    statement -> statement TIMES statement
Rule 18    statement -> statement DIVIDE statement
Rule 19    statement -> statement MODULO statement
Rule 20    statement -> statement EQUAL statement
Rule 21    statement -> statement NOT_EQUAL statement
Rule 22    statement -> statement GREATER statement
Rule 23    statement -> statement LESS statement
Rule 24    statement -> statement GREATER_EQUAL statement
Rule 25    statement -> statement LESS_EQUAL statement
Rule 26    statement -> statement AND statement
Rule 27    statement -> statement OR statement
Rule 28    statement -> statement LOGICAL_AND statement
Rule 29    statement -> statement LOGICAL_OR statement
Rule 30    statement -> INT
Rule 31    statement -> FLOAT
Rule 32    statement -> BOOL
Rule 33    statement -> STRING
Rule 34    statement -> L_PAREN statement R_PAREN
Rule 35    statement -> L_PAREN conditional R_PAREN
Rule 36    statement -> IDENTIFIER INCREMENT
Rule 37    statement -> IDENTIFIER DECREMENT
Rule 38    conditional -> conditional EQUAL conditional
Rule 39    conditional -> conditional NOT_EQUAL conditional
Rule 40    conditional -> conditional GREATER conditional
Rule 41    conditional -> conditional LESS conditional
Rule 42    conditional -> conditional GREATER_EQUAL conditional
Rule 43    conditional -> conditional LESS_EQUAL conditional
Rule 44    conditional -> conditional AND conditional
Rule 45    conditional -> conditional LOGICAL_AND conditional
Rule 46    conditional -> conditional OR conditional
Rule 47    conditional -> conditional LOGICAL_OR conditional
Rule 48    conditional -> statement
Rule 49    for_loop -> FOR L_PAREN var_declaration SEMICOLON conditional SEMICOLON statement R_PAREN L_BRACE expressions R_BRACE
Rule 50    while_loop -> WHILE L_PAREN conditional R_PAREN L_BRACE expressions R_BRACE
Rule 51    if_else_statement -> IF L_PAREN conditional R_PAREN L_BRACE expressions R_BRACE ELSE L_BRACE expressions R_BRACE
Rule 52    if_else_statement -> IF L_PAREN conditional R_PAREN L_BRACE expressions R_BRACE
Rule 53    var_declaration -> data_type declarations
Rule 54    data_type -> INT
Rule 55    data_type -> FLOAT
Rule 56    data_type -> BOOL
Rule 57    data_type -> STRING
Rule 58    declarations -> IDENTIFIER COMMA declarations
Rule 59    declarations -> IDENTIFIER
Rule 60    var_declaration -> IDENTIFIER ASSIGN statement
Rule 61    empty -> <empty>

Terminals, with rules where they appear

AND                  : 26 44
ASSIGN               : 60
BOOL                 : 32 56
CHAR                 : 
COLON                : 
COMMA                : 58
DECREMENT            : 37
DIVIDE               : 18
DOUBLE               : 
ELSE                 : 51
EQUAL                : 20 38
FLOAT                : 31 55
FOR                  : 49
GREATER              : 22 40
GREATER_EQUAL        : 24 42
IDENTIFIER           : 14 36 37 58 59 60
IF                   : 51 52
INCREMENT            : 36
INT                  : 30 54
LESS                 : 23 41
LESS_EQUAL           : 25 43
LOGICAL_AND          : 28 45
LOGICAL_NOT          : 
LOGICAL_OR           : 29 47
L_BRACE              : 1 49 50 51 51 52
L_BRACKET            : 
L_PAREN              : 12 13 34 35 49 50 51 52
MAIN                 : 1
MINUS                : 16
MODULO               : 19
NOT                  : 
NOT_EQUAL            : 21 39
OR                   : 27 46
PLUS                 : 15
PROGRAM              : 1
RETURN               : 
R_BRACE              : 1 49 50 51 51 52
R_BRACKET            : 
R_PAREN              : 12 13 34 35 49 50 51 52
SEMICOLON            : 4 5 6 7 49 49
STRING               : 33 57
TIMES                : 17
WHILE                : 50
WRITE                : 12
WRITELN              : 13
error                : 

Nonterminals, with rules where they appear

conditional          : 35 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 49 50 51 52
data_type            : 53
declarations         : 53 58
empty                : 11
expression           : 2 3
expressions          : 1 2 49 50 51 51 52
for_loop             : 9
if_else_statement    : 8
program              : 0
statement            : 7 12 13 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 34 48 49 60
var_declaration      : 4 49
while_loop           : 10
write                : 5
writeln              : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM MAIN L_BRACE expressions R_BRACE

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . MAIN L_BRACE expressions R_BRACE

    MAIN            shift and go to state 3


state 3

    (1) program -> PROGRAM MAIN . L_BRACE expressions R_BRACE

    L_BRACE         shift and go to state 4


state 4

    (1) program -> PROGRAM MAIN L_BRACE . expressions R_BRACE
    (2) expressions -> . expressions expression
    (3) expressions -> . expression
    (4) expression -> . var_declaration SEMICOLON
    (5) expression -> . write SEMICOLON
    (6) expression -> . writeln SEMICOLON
    (7) expression -> . statement SEMICOLON
    (8) expression -> . if_else_statement
    (9) expression -> . for_loop
    (10) expression -> . while_loop
    (11) expression -> . empty
    (53) var_declaration -> . data_type declarations
    (60) var_declaration -> . IDENTIFIER ASSIGN statement
    (12) write -> . WRITE L_PAREN statement R_PAREN
    (13) writeln -> . WRITELN L_PAREN statement R_PAREN
    (14) statement -> . IDENTIFIER
    (15) statement -> . statement PLUS statement
    (16) statement -> . statement MINUS statement
    (17) statement -> . statement TIMES statement
    (18) statement -> . statement DIVIDE statement
    (19) statement -> . statement MODULO statement
    (20) statement -> . statement EQUAL statement
    (21) statement -> . statement NOT_EQUAL statement
    (22) statement -> . statement GREATER statement
    (23) statement -> . statement LESS statement
    (24) statement -> . statement GREATER_EQUAL statement
    (25) statement -> . statement LESS_EQUAL statement
    (26) statement -> . statement AND statement
    (27) statement -> . statement OR statement
    (28) statement -> . statement LOGICAL_AND statement
    (29) statement -> . statement LOGICAL_OR statement
    (30) statement -> . INT
    (31) statement -> . FLOAT
    (32) statement -> . BOOL
    (33) statement -> . STRING
    (34) statement -> . L_PAREN statement R_PAREN
    (35) statement -> . L_PAREN conditional R_PAREN
    (36) statement -> . IDENTIFIER INCREMENT
    (37) statement -> . IDENTIFIER DECREMENT
    (51) if_else_statement -> . IF L_PAREN conditional R_PAREN L_BRACE expressions R_BRACE ELSE L_BRACE expressions R_BRACE
    (52) if_else_statement -> . IF L_PAREN conditional R_PAREN L_BRACE expressions R_BRACE
    (49) for_loop -> . FOR L_PAREN var_declaration SEMICOLON conditional SEMICOLON statement R_PAREN L_BRACE expressions R_BRACE
    (50) while_loop -> . WHILE L_PAREN conditional R_PAREN L_BRACE expressions R_BRACE
    (61) empty -> .
    (54) data_type -> . INT
    (55) data_type -> . FLOAT
    (56) data_type -> . BOOL
    (57) data_type -> . STRING

  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for WRITELN resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for L_PAREN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
    IDENTIFIER      shift and go to state 16
    WRITE           shift and go to state 17
    WRITELN         shift and go to state 19
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    BOOL            shift and go to state 22
    STRING          shift and go to state 23
    L_PAREN         shift and go to state 18
    IF              shift and go to state 24
    FOR             shift and go to state 25
    WHILE           shift and go to state 26
    R_BRACE         reduce using rule 61 (empty -> .)

  ! IDENTIFIER      [ reduce using rule 61 (empty -> .) ]
  ! WRITE           [ reduce using rule 61 (empty -> .) ]
  ! WRITELN         [ reduce using rule 61 (empty -> .) ]
  ! INT             [ reduce using rule 61 (empty -> .) ]
  ! FLOAT           [ reduce using rule 61 (empty -> .) ]
  ! BOOL            [ reduce using rule 61 (empty -> .) ]
  ! STRING          [ reduce using rule 61 (empty -> .) ]
  ! L_PAREN         [ reduce using rule 61 (empty -> .) ]
  ! IF              [ reduce using rule 61 (empty -> .) ]
  ! FOR             [ reduce using rule 61 (empty -> .) ]
  ! WHILE           [ reduce using rule 61 (empty -> .) ]

    expressions                    shift and go to state 5
    expression                     shift and go to state 6
    var_declaration                shift and go to state 7
    write                          shift and go to state 8
    writeln                        shift and go to state 9
    statement                      shift and go to state 10
    if_else_statement              shift and go to state 11
    for_loop                       shift and go to state 12
    while_loop                     shift and go to state 13
    empty                          shift and go to state 14
    data_type                      shift and go to state 15

state 5

    (1) program -> PROGRAM MAIN L_BRACE expressions . R_BRACE
    (2) expressions -> expressions . expression
    (4) expression -> . var_declaration SEMICOLON
    (5) expression -> . write SEMICOLON
    (6) expression -> . writeln SEMICOLON
    (7) expression -> . statement SEMICOLON
    (8) expression -> . if_else_statement
    (9) expression -> . for_loop
    (10) expression -> . while_loop
    (11) expression -> . empty
    (53) var_declaration -> . data_type declarations
    (60) var_declaration -> . IDENTIFIER ASSIGN statement
    (12) write -> . WRITE L_PAREN statement R_PAREN
    (13) writeln -> . WRITELN L_PAREN statement R_PAREN
    (14) statement -> . IDENTIFIER
    (15) statement -> . statement PLUS statement
    (16) statement -> . statement MINUS statement
    (17) statement -> . statement TIMES statement
    (18) statement -> . statement DIVIDE statement
    (19) statement -> . statement MODULO statement
    (20) statement -> . statement EQUAL statement
    (21) statement -> . statement NOT_EQUAL statement
    (22) statement -> . statement GREATER statement
    (23) statement -> . statement LESS statement
    (24) statement -> . statement GREATER_EQUAL statement
    (25) statement -> . statement LESS_EQUAL statement
    (26) statement -> . statement AND statement
    (27) statement -> . statement OR statement
    (28) statement -> . statement LOGICAL_AND statement
    (29) statement -> . statement LOGICAL_OR statement
    (30) statement -> . INT
    (31) statement -> . FLOAT
    (32) statement -> . BOOL
    (33) statement -> . STRING
    (34) statement -> . L_PAREN statement R_PAREN
    (35) statement -> . L_PAREN conditional R_PAREN
    (36) statement -> . IDENTIFIER INCREMENT
    (37) statement -> . IDENTIFIER DECREMENT
    (51) if_else_statement -> . IF L_PAREN conditional R_PAREN L_BRACE expressions R_BRACE ELSE L_BRACE expressions R_BRACE
    (52) if_else_statement -> . IF L_PAREN conditional R_PAREN L_BRACE expressions R_BRACE
    (49) for_loop -> . FOR L_PAREN var_declaration SEMICOLON conditional SEMICOLON statement R_PAREN L_BRACE expressions R_BRACE
    (50) while_loop -> . WHILE L_PAREN conditional R_PAREN L_BRACE expressions R_BRACE
    (61) empty -> .
    (54) data_type -> . INT
    (55) data_type -> . FLOAT
    (56) data_type -> . BOOL
    (57) data_type -> . STRING

  ! shift/reduce conflict for R_BRACE resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for WRITELN resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for L_PAREN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
    R_BRACE         shift and go to state 27
    IDENTIFIER      shift and go to state 16
    WRITE           shift and go to state 17
    WRITELN         shift and go to state 19
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    BOOL            shift and go to state 22
    STRING          shift and go to state 23
    L_PAREN         shift and go to state 18
    IF              shift and go to state 24
    FOR             shift and go to state 25
    WHILE           shift and go to state 26

  ! R_BRACE         [ reduce using rule 61 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 61 (empty -> .) ]
  ! WRITE           [ reduce using rule 61 (empty -> .) ]
  ! WRITELN         [ reduce using rule 61 (empty -> .) ]
  ! INT             [ reduce using rule 61 (empty -> .) ]
  ! FLOAT           [ reduce using rule 61 (empty -> .) ]
  ! BOOL            [ reduce using rule 61 (empty -> .) ]
  ! STRING          [ reduce using rule 61 (empty -> .) ]
  ! L_PAREN         [ reduce using rule 61 (empty -> .) ]
  ! IF              [ reduce using rule 61 (empty -> .) ]
  ! FOR             [ reduce using rule 61 (empty -> .) ]
  ! WHILE           [ reduce using rule 61 (empty -> .) ]

    expression                     shift and go to state 28
    var_declaration                shift and go to state 7
    write                          shift and go to state 8
    writeln                        shift and go to state 9
    statement                      shift and go to state 10
    if_else_statement              shift and go to state 11
    for_loop                       shift and go to state 12
    while_loop                     shift and go to state 13
    empty                          shift and go to state 14
    data_type                      shift and go to state 15

state 6

    (3) expressions -> expression .

    R_BRACE         reduce using rule 3 (expressions -> expression .)
    IDENTIFIER      reduce using rule 3 (expressions -> expression .)
    WRITE           reduce using rule 3 (expressions -> expression .)
    WRITELN         reduce using rule 3 (expressions -> expression .)
    INT             reduce using rule 3 (expressions -> expression .)
    FLOAT           reduce using rule 3 (expressions -> expression .)
    BOOL            reduce using rule 3 (expressions -> expression .)
    STRING          reduce using rule 3 (expressions -> expression .)
    L_PAREN         reduce using rule 3 (expressions -> expression .)
    IF              reduce using rule 3 (expressions -> expression .)
    FOR             reduce using rule 3 (expressions -> expression .)
    WHILE           reduce using rule 3 (expressions -> expression .)


state 7

    (4) expression -> var_declaration . SEMICOLON

    SEMICOLON       shift and go to state 29


state 8

    (5) expression -> write . SEMICOLON

    SEMICOLON       shift and go to state 30


state 9

    (6) expression -> writeln . SEMICOLON

    SEMICOLON       shift and go to state 31


state 10

    (7) expression -> statement . SEMICOLON
    (15) statement -> statement . PLUS statement
    (16) statement -> statement . MINUS statement
    (17) statement -> statement . TIMES statement
    (18) statement -> statement . DIVIDE statement
    (19) statement -> statement . MODULO statement
    (20) statement -> statement . EQUAL statement
    (21) statement -> statement . NOT_EQUAL statement
    (22) statement -> statement . GREATER statement
    (23) statement -> statement . LESS statement
    (24) statement -> statement . GREATER_EQUAL statement
    (25) statement -> statement . LESS_EQUAL statement
    (26) statement -> statement . AND statement
    (27) statement -> statement . OR statement
    (28) statement -> statement . LOGICAL_AND statement
    (29) statement -> statement . LOGICAL_OR statement

    SEMICOLON       shift and go to state 32
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    DIVIDE          shift and go to state 36
    MODULO          shift and go to state 37
    EQUAL           shift and go to state 38
    NOT_EQUAL       shift and go to state 39
    GREATER         shift and go to state 40
    LESS            shift and go to state 41
    GREATER_EQUAL   shift and go to state 42
    LESS_EQUAL      shift and go to state 43
    AND             shift and go to state 44
    OR              shift and go to state 45
    LOGICAL_AND     shift and go to state 46
    LOGICAL_OR      shift and go to state 47


state 11

    (8) expression -> if_else_statement .

    R_BRACE         reduce using rule 8 (expression -> if_else_statement .)
    IDENTIFIER      reduce using rule 8 (expression -> if_else_statement .)
    WRITE           reduce using rule 8 (expression -> if_else_statement .)
    WRITELN         reduce using rule 8 (expression -> if_else_statement .)
    INT             reduce using rule 8 (expression -> if_else_statement .)
    FLOAT           reduce using rule 8 (expression -> if_else_statement .)
    BOOL            reduce using rule 8 (expression -> if_else_statement .)
    STRING          reduce using rule 8 (expression -> if_else_statement .)
    L_PAREN         reduce using rule 8 (expression -> if_else_statement .)
    IF              reduce using rule 8 (expression -> if_else_statement .)
    FOR             reduce using rule 8 (expression -> if_else_statement .)
    WHILE           reduce using rule 8 (expression -> if_else_statement .)


state 12

    (9) expression -> for_loop .

    R_BRACE         reduce using rule 9 (expression -> for_loop .)
    IDENTIFIER      reduce using rule 9 (expression -> for_loop .)
    WRITE           reduce using rule 9 (expression -> for_loop .)
    WRITELN         reduce using rule 9 (expression -> for_loop .)
    INT             reduce using rule 9 (expression -> for_loop .)
    FLOAT           reduce using rule 9 (expression -> for_loop .)
    BOOL            reduce using rule 9 (expression -> for_loop .)
    STRING          reduce using rule 9 (expression -> for_loop .)
    L_PAREN         reduce using rule 9 (expression -> for_loop .)
    IF              reduce using rule 9 (expression -> for_loop .)
    FOR             reduce using rule 9 (expression -> for_loop .)
    WHILE           reduce using rule 9 (expression -> for_loop .)


state 13

    (10) expression -> while_loop .

    R_BRACE         reduce using rule 10 (expression -> while_loop .)
    IDENTIFIER      reduce using rule 10 (expression -> while_loop .)
    WRITE           reduce using rule 10 (expression -> while_loop .)
    WRITELN         reduce using rule 10 (expression -> while_loop .)
    INT             reduce using rule 10 (expression -> while_loop .)
    FLOAT           reduce using rule 10 (expression -> while_loop .)
    BOOL            reduce using rule 10 (expression -> while_loop .)
    STRING          reduce using rule 10 (expression -> while_loop .)
    L_PAREN         reduce using rule 10 (expression -> while_loop .)
    IF              reduce using rule 10 (expression -> while_loop .)
    FOR             reduce using rule 10 (expression -> while_loop .)
    WHILE           reduce using rule 10 (expression -> while_loop .)


state 14

    (11) expression -> empty .

    R_BRACE         reduce using rule 11 (expression -> empty .)
    IDENTIFIER      reduce using rule 11 (expression -> empty .)
    WRITE           reduce using rule 11 (expression -> empty .)
    WRITELN         reduce using rule 11 (expression -> empty .)
    INT             reduce using rule 11 (expression -> empty .)
    FLOAT           reduce using rule 11 (expression -> empty .)
    BOOL            reduce using rule 11 (expression -> empty .)
    STRING          reduce using rule 11 (expression -> empty .)
    L_PAREN         reduce using rule 11 (expression -> empty .)
    IF              reduce using rule 11 (expression -> empty .)
    FOR             reduce using rule 11 (expression -> empty .)
    WHILE           reduce using rule 11 (expression -> empty .)


state 15

    (53) var_declaration -> data_type . declarations
    (58) declarations -> . IDENTIFIER COMMA declarations
    (59) declarations -> . IDENTIFIER

    IDENTIFIER      shift and go to state 49

    declarations                   shift and go to state 48

state 16

    (60) var_declaration -> IDENTIFIER . ASSIGN statement
    (14) statement -> IDENTIFIER .
    (36) statement -> IDENTIFIER . INCREMENT
    (37) statement -> IDENTIFIER . DECREMENT

    ASSIGN          shift and go to state 50
    SEMICOLON       reduce using rule 14 (statement -> IDENTIFIER .)
    PLUS            reduce using rule 14 (statement -> IDENTIFIER .)
    MINUS           reduce using rule 14 (statement -> IDENTIFIER .)
    TIMES           reduce using rule 14 (statement -> IDENTIFIER .)
    DIVIDE          reduce using rule 14 (statement -> IDENTIFIER .)
    MODULO          reduce using rule 14 (statement -> IDENTIFIER .)
    EQUAL           reduce using rule 14 (statement -> IDENTIFIER .)
    NOT_EQUAL       reduce using rule 14 (statement -> IDENTIFIER .)
    GREATER         reduce using rule 14 (statement -> IDENTIFIER .)
    LESS            reduce using rule 14 (statement -> IDENTIFIER .)
    GREATER_EQUAL   reduce using rule 14 (statement -> IDENTIFIER .)
    LESS_EQUAL      reduce using rule 14 (statement -> IDENTIFIER .)
    AND             reduce using rule 14 (statement -> IDENTIFIER .)
    OR              reduce using rule 14 (statement -> IDENTIFIER .)
    LOGICAL_AND     reduce using rule 14 (statement -> IDENTIFIER .)
    LOGICAL_OR      reduce using rule 14 (statement -> IDENTIFIER .)
    INCREMENT       shift and go to state 51
    DECREMENT       shift and go to state 52


state 17

    (12) write -> WRITE . L_PAREN statement R_PAREN

    L_PAREN         shift and go to state 53


state 18

    (34) statement -> L_PAREN . statement R_PAREN
    (35) statement -> L_PAREN . conditional R_PAREN
    (14) statement -> . IDENTIFIER
    (15) statement -> . statement PLUS statement
    (16) statement -> . statement MINUS statement
    (17) statement -> . statement TIMES statement
    (18) statement -> . statement DIVIDE statement
    (19) statement -> . statement MODULO statement
    (20) statement -> . statement EQUAL statement
    (21) statement -> . statement NOT_EQUAL statement
    (22) statement -> . statement GREATER statement
    (23) statement -> . statement LESS statement
    (24) statement -> . statement GREATER_EQUAL statement
    (25) statement -> . statement LESS_EQUAL statement
    (26) statement -> . statement AND statement
    (27) statement -> . statement OR statement
    (28) statement -> . statement LOGICAL_AND statement
    (29) statement -> . statement LOGICAL_OR statement
    (30) statement -> . INT
    (31) statement -> . FLOAT
    (32) statement -> . BOOL
    (33) statement -> . STRING
    (34) statement -> . L_PAREN statement R_PAREN
    (35) statement -> . L_PAREN conditional R_PAREN
    (36) statement -> . IDENTIFIER INCREMENT
    (37) statement -> . IDENTIFIER DECREMENT
    (38) conditional -> . conditional EQUAL conditional
    (39) conditional -> . conditional NOT_EQUAL conditional
    (40) conditional -> . conditional GREATER conditional
    (41) conditional -> . conditional LESS conditional
    (42) conditional -> . conditional GREATER_EQUAL conditional
    (43) conditional -> . conditional LESS_EQUAL conditional
    (44) conditional -> . conditional AND conditional
    (45) conditional -> . conditional LOGICAL_AND conditional
    (46) conditional -> . conditional OR conditional
    (47) conditional -> . conditional LOGICAL_OR conditional
    (48) conditional -> . statement

    IDENTIFIER      shift and go to state 56
    INT             shift and go to state 57
    FLOAT           shift and go to state 58
    BOOL            shift and go to state 59
    STRING          shift and go to state 60
    L_PAREN         shift and go to state 18

    statement                      shift and go to state 54
    conditional                    shift and go to state 55

state 19

    (13) writeln -> WRITELN . L_PAREN statement R_PAREN

    L_PAREN         shift and go to state 61


state 20

    (30) statement -> INT .
    (54) data_type -> INT .

    SEMICOLON       reduce using rule 30 (statement -> INT .)
    PLUS            reduce using rule 30 (statement -> INT .)
    MINUS           reduce using rule 30 (statement -> INT .)
    TIMES           reduce using rule 30 (statement -> INT .)
    DIVIDE          reduce using rule 30 (statement -> INT .)
    MODULO          reduce using rule 30 (statement -> INT .)
    EQUAL           reduce using rule 30 (statement -> INT .)
    NOT_EQUAL       reduce using rule 30 (statement -> INT .)
    GREATER         reduce using rule 30 (statement -> INT .)
    LESS            reduce using rule 30 (statement -> INT .)
    GREATER_EQUAL   reduce using rule 30 (statement -> INT .)
    LESS_EQUAL      reduce using rule 30 (statement -> INT .)
    AND             reduce using rule 30 (statement -> INT .)
    OR              reduce using rule 30 (statement -> INT .)
    LOGICAL_AND     reduce using rule 30 (statement -> INT .)
    LOGICAL_OR      reduce using rule 30 (statement -> INT .)
    IDENTIFIER      reduce using rule 54 (data_type -> INT .)


state 21

    (31) statement -> FLOAT .
    (55) data_type -> FLOAT .

    SEMICOLON       reduce using rule 31 (statement -> FLOAT .)
    PLUS            reduce using rule 31 (statement -> FLOAT .)
    MINUS           reduce using rule 31 (statement -> FLOAT .)
    TIMES           reduce using rule 31 (statement -> FLOAT .)
    DIVIDE          reduce using rule 31 (statement -> FLOAT .)
    MODULO          reduce using rule 31 (statement -> FLOAT .)
    EQUAL           reduce using rule 31 (statement -> FLOAT .)
    NOT_EQUAL       reduce using rule 31 (statement -> FLOAT .)
    GREATER         reduce using rule 31 (statement -> FLOAT .)
    LESS            reduce using rule 31 (statement -> FLOAT .)
    GREATER_EQUAL   reduce using rule 31 (statement -> FLOAT .)
    LESS_EQUAL      reduce using rule 31 (statement -> FLOAT .)
    AND             reduce using rule 31 (statement -> FLOAT .)
    OR              reduce using rule 31 (statement -> FLOAT .)
    LOGICAL_AND     reduce using rule 31 (statement -> FLOAT .)
    LOGICAL_OR      reduce using rule 31 (statement -> FLOAT .)
    IDENTIFIER      reduce using rule 55 (data_type -> FLOAT .)


state 22

    (32) statement -> BOOL .
    (56) data_type -> BOOL .

    SEMICOLON       reduce using rule 32 (statement -> BOOL .)
    PLUS            reduce using rule 32 (statement -> BOOL .)
    MINUS           reduce using rule 32 (statement -> BOOL .)
    TIMES           reduce using rule 32 (statement -> BOOL .)
    DIVIDE          reduce using rule 32 (statement -> BOOL .)
    MODULO          reduce using rule 32 (statement -> BOOL .)
    EQUAL           reduce using rule 32 (statement -> BOOL .)
    NOT_EQUAL       reduce using rule 32 (statement -> BOOL .)
    GREATER         reduce using rule 32 (statement -> BOOL .)
    LESS            reduce using rule 32 (statement -> BOOL .)
    GREATER_EQUAL   reduce using rule 32 (statement -> BOOL .)
    LESS_EQUAL      reduce using rule 32 (statement -> BOOL .)
    AND             reduce using rule 32 (statement -> BOOL .)
    OR              reduce using rule 32 (statement -> BOOL .)
    LOGICAL_AND     reduce using rule 32 (statement -> BOOL .)
    LOGICAL_OR      reduce using rule 32 (statement -> BOOL .)
    IDENTIFIER      reduce using rule 56 (data_type -> BOOL .)


state 23

    (33) statement -> STRING .
    (57) data_type -> STRING .

    SEMICOLON       reduce using rule 33 (statement -> STRING .)
    PLUS            reduce using rule 33 (statement -> STRING .)
    MINUS           reduce using rule 33 (statement -> STRING .)
    TIMES           reduce using rule 33 (statement -> STRING .)
    DIVIDE          reduce using rule 33 (statement -> STRING .)
    MODULO          reduce using rule 33 (statement -> STRING .)
    EQUAL           reduce using rule 33 (statement -> STRING .)
    NOT_EQUAL       reduce using rule 33 (statement -> STRING .)
    GREATER         reduce using rule 33 (statement -> STRING .)
    LESS            reduce using rule 33 (statement -> STRING .)
    GREATER_EQUAL   reduce using rule 33 (statement -> STRING .)
    LESS_EQUAL      reduce using rule 33 (statement -> STRING .)
    AND             reduce using rule 33 (statement -> STRING .)
    OR              reduce using rule 33 (statement -> STRING .)
    LOGICAL_AND     reduce using rule 33 (statement -> STRING .)
    LOGICAL_OR      reduce using rule 33 (statement -> STRING .)
    IDENTIFIER      reduce using rule 57 (data_type -> STRING .)


state 24

    (51) if_else_statement -> IF . L_PAREN conditional R_PAREN L_BRACE expressions R_BRACE ELSE L_BRACE expressions R_BRACE
    (52) if_else_statement -> IF . L_PAREN conditional R_PAREN L_BRACE expressions R_BRACE

    L_PAREN         shift and go to state 62


state 25

    (49) for_loop -> FOR . L_PAREN var_declaration SEMICOLON conditional SEMICOLON statement R_PAREN L_BRACE expressions R_BRACE

    L_PAREN         shift and go to state 63


state 26

    (50) while_loop -> WHILE . L_PAREN conditional R_PAREN L_BRACE expressions R_BRACE

    L_PAREN         shift and go to state 64


state 27

    (1) program -> PROGRAM MAIN L_BRACE expressions R_BRACE .

    $end            reduce using rule 1 (program -> PROGRAM MAIN L_BRACE expressions R_BRACE .)


state 28

    (2) expressions -> expressions expression .

    R_BRACE         reduce using rule 2 (expressions -> expressions expression .)
    IDENTIFIER      reduce using rule 2 (expressions -> expressions expression .)
    WRITE           reduce using rule 2 (expressions -> expressions expression .)
    WRITELN         reduce using rule 2 (expressions -> expressions expression .)
    INT             reduce using rule 2 (expressions -> expressions expression .)
    FLOAT           reduce using rule 2 (expressions -> expressions expression .)
    BOOL            reduce using rule 2 (expressions -> expressions expression .)
    STRING          reduce using rule 2 (expressions -> expressions expression .)
    L_PAREN         reduce using rule 2 (expressions -> expressions expression .)
    IF              reduce using rule 2 (expressions -> expressions expression .)
    FOR             reduce using rule 2 (expressions -> expressions expression .)
    WHILE           reduce using rule 2 (expressions -> expressions expression .)


state 29

    (4) expression -> var_declaration SEMICOLON .

    R_BRACE         reduce using rule 4 (expression -> var_declaration SEMICOLON .)
    IDENTIFIER      reduce using rule 4 (expression -> var_declaration SEMICOLON .)
    WRITE           reduce using rule 4 (expression -> var_declaration SEMICOLON .)
    WRITELN         reduce using rule 4 (expression -> var_declaration SEMICOLON .)
    INT             reduce using rule 4 (expression -> var_declaration SEMICOLON .)
    FLOAT           reduce using rule 4 (expression -> var_declaration SEMICOLON .)
    BOOL            reduce using rule 4 (expression -> var_declaration SEMICOLON .)
    STRING          reduce using rule 4 (expression -> var_declaration SEMICOLON .)
    L_PAREN         reduce using rule 4 (expression -> var_declaration SEMICOLON .)
    IF              reduce using rule 4 (expression -> var_declaration SEMICOLON .)
    FOR             reduce using rule 4 (expression -> var_declaration SEMICOLON .)
    WHILE           reduce using rule 4 (expression -> var_declaration SEMICOLON .)


state 30

    (5) expression -> write SEMICOLON .

    R_BRACE         reduce using rule 5 (expression -> write SEMICOLON .)
    IDENTIFIER      reduce using rule 5 (expression -> write SEMICOLON .)
    WRITE           reduce using rule 5 (expression -> write SEMICOLON .)
    WRITELN         reduce using rule 5 (expression -> write SEMICOLON .)
    INT             reduce using rule 5 (expression -> write SEMICOLON .)
    FLOAT           reduce using rule 5 (expression -> write SEMICOLON .)
    BOOL            reduce using rule 5 (expression -> write SEMICOLON .)
    STRING          reduce using rule 5 (expression -> write SEMICOLON .)
    L_PAREN         reduce using rule 5 (expression -> write SEMICOLON .)
    IF              reduce using rule 5 (expression -> write SEMICOLON .)
    FOR             reduce using rule 5 (expression -> write SEMICOLON .)
    WHILE           reduce using rule 5 (expression -> write SEMICOLON .)


state 31

    (6) expression -> writeln SEMICOLON .

    R_BRACE         reduce using rule 6 (expression -> writeln SEMICOLON .)
    IDENTIFIER      reduce using rule 6 (expression -> writeln SEMICOLON .)
    WRITE           reduce using rule 6 (expression -> writeln SEMICOLON .)
    WRITELN         reduce using rule 6 (expression -> writeln SEMICOLON .)
    INT             reduce using rule 6 (expression -> writeln SEMICOLON .)
    FLOAT           reduce using rule 6 (expression -> writeln SEMICOLON .)
    BOOL            reduce using rule 6 (expression -> writeln SEMICOLON .)
    STRING          reduce using rule 6 (expression -> writeln SEMICOLON .)
    L_PAREN         reduce using rule 6 (expression -> writeln SEMICOLON .)
    IF              reduce using rule 6 (expression -> writeln SEMICOLON .)
    FOR             reduce using rule 6 (expression -> writeln SEMICOLON .)
    WHILE           reduce using rule 6 (expression -> writeln SEMICOLON .)


state 32

    (7) expression -> statement SEMICOLON .
